--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/goulash.html">Goulash</a>
+        <a href="recipes/sloppy-joes.html">Sloppy Joes</a>
     </body>
 </html>
