--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/goulash.html">Goulash</a></li>
-            <li><a href="recipes/sloppy-joes.html">Sloppy Joes</a></li>
-        </ul>
+        <a href="recipes/goulash.html">Goulash</a>
+        <a href="recipes/sloppy-joes.html">Sloppy Joes</a>
+        <a href="recipes/sahlens.html">Sahlens Hotdogs</a>
     </body>
 </html>
