--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/goulash.html">Goulash</a>
-        <a href="recipes/sloppy-joes.html">Sloppy Joes</a>
-        <a href="recipes/sahlens.html">Sahlens Hotdogs</a>
+        <ul>
+            <li><a href="recipes/goulash.html">Goulash</a></li>
+            <li><a href="recipes/sloppy-joes.html">Sloppy Joes</a></li>
+            <li><a href="recipes/sahlens.html">Sahlens Hotdogs</a></li>
+        </ul>    
     </body>
 </html>
