--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Some Recipes</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Some Recipes</h1>
         <ul>
             <li><a href="recipes/goulash.html">Goulash</a></li>
             <li><a href="recipes/sloppy-joes.html">Sloppy Joes</a></li>
